--- a/config-server/src/main/resources/config/department-service.yml
+++ b/config-server/src/main/resources/config/department-service.yml
@@ -5,3 +5,17 @@ eureka:
   client:
     serviceUrl:
       defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE}
+
+spring:
+  zipkin:
+    base-url: http://localhost:9411
+    enabled: true
+
+management:
+  tracing:
+    sampling:
+      probability: 1.0
+
+logging:
+  level:
+    org.springframework.boot.actuate.autoconfigure.tracing.zipkin: DEBUG
